cabal-version:      3.0
name:               build92
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Zubin Duggal
maintainer:         zubin.duggal@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    if impl(ghc >= 9.4)
      buildable: False
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   .
    default-language: Haskell2010
